objects/Project_Comment__c.object
<CustomObject>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <formula>Project__r.Business_Unit__c</formula>
        <inlineHelpText>Automatically pulls from the Project&apos;s Business Unit.</inlineHelpText>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_Details__c</fullName>
        <label>Comment Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Created_By_Role__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Piece__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Piece</label>
        <referenceTo>Project_Piece__c</referenceTo>
        <relationshipLabel>Project Comments</relationshipLabel>
        <relationshipName>Project_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>SFDC_520_Quote__c</referenceTo>
        <relationshipLabel>Project Comments</relationshipLabel>
        <relationshipName>Project_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Comment</label>
    <nameField>
        <displayFormat>PC-{000000}</displayFormat>
        <label>Project Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>